--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title:              Clean Blog
+title:              Claudia Kho
 email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+description:        hiii
+author:             Claudia Kho
+# baseurl:            "/startbootstrap-clean-blog-jekyll"
+url:                "https://khoclaudia.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
 github_username:    StartBootstrap
 facebook_username:  StartBootstrap
-instagram_username:  
+instagram_username:
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
